fix search list items text not wraping (angular material styles fix)

--- a/src/app/movie-details/movie-details.component.scss
+++ b/src/app/movie-details/movie-details.component.scss
@@ -1,6 +1,5 @@
 
-.first-section {
-  // background-image: rgba(0, 0, 0, 0.5);
+.movie-ratings {
   min-height: 60vh;
   background-size: cover;
   background-repeat: no-repeat;
@@ -119,7 +118,7 @@
   }
 
   &__item {
-    // height: 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
