--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -61,6 +61,8 @@
   & > li {
 
 
+    white-space: normal !important;
+
     border-bottom: 1px solid black;
     padding:1rem;
     color: black;
